--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header span {
 }
 
 select {
+    background-repeat: no-repeat;
     width: 150px;
     padding: 9px 87px 8px 12px;
     font-weight: 400;
@@ -86,7 +87,7 @@ select {
 
 .frameworks-list {
     list-style-image: url(./assets/image/solar_map-arrow-up-bold.svg);
-    padding-left: 20px;
+    padding-left: 0px 20px;
     font-weight: 400;
     font-size: 16px;
     /* Стили для маркированного списка во второй секции */
@@ -95,13 +96,13 @@ select {
 .books-list {
     font-weight: 400;
     font-size: 16px;
-    padding-left: 20px;
+    padding-left: 0px 20px;
     /* Стили для нумерованного списка во второй секции */
 }
 
 .label {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     /* Стили для подписей чекбоксов */
 }
 
@@ -114,7 +115,7 @@ select {
     height: 36px;
     background-color: rgba(255, 255, 255, 0);
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     color: rgba(48, 48, 48, 0.2);
     /* Стили для односточного поля ввода текста */
 }
@@ -144,14 +145,14 @@ table {
 }
 
 th, td {
-    padding: 15px;
+    padding: 12px 15px;
 
     /* Стили для ячеек таблицы */
 }
 
 footer {
     background-color: rgba(163, 167, 255, 0.3);
-    padding: 26px 1361px 27px 1px;
+    padding: 26px 0;
     /* Стили для футера */
 }
 
