--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ select {
 
 .frameworks-list {
     list-style-image: url(./assets/image/solar_map-arrow-up-bold.svg);
-    padding-left: 20px;
+    padding: 0px 20px;
     font-weight: 400;
     font-size: 16px;
     /* Стили для маркированного списка во второй секции */
@@ -102,7 +102,7 @@ select {
 
 .label {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     /* Стили для подписей чекбоксов */
 }
 
@@ -115,7 +115,7 @@ select {
     height: 36px;
     background-color: rgba(255, 255, 255, 0);
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     color: rgba(48, 48, 48, 0.2);
     /* Стили для односточного поля ввода текста */
 }
